--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -1211,6 +1211,7 @@ table.table_layout td {
     font-size: 18px;
     color:#009900;
     padding-bottom: 5px;
+    font-family: Arial;
 }
 .star_caption {
     font-size: 14px;
@@ -1247,4 +1248,23 @@ table.table_layout td {
     width:22px;
     height:22px;
     float: left;
+}
+/* "Пошли сюда со мной"
+--------------------------------------------------------------*/
+#rest_follow {
+    padding-top: 10px;
+}
+#rest_follow .rest_follow_caption{
+    font-size:18px;
+    font-family: Arial;
+    margin-bottom: 8px;
+}
+#rest_follow .follow{
+    float: right;
+    margin-top: 7px;
+    margin-right: 13px;
+}
+#rest_follow .follower img{
+    width:44px;
+    margin-right: 3px;
 }
