--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -1288,9 +1288,11 @@ table.table_layout td {
 #dating_dialog .option select{
     width:120px;
 }
-#dating_dialog .option label{
+#dating_dialog label{
     font-size:12px;
     display: block;
+    text-align: left;
+    padding-left: 6px;
 }
 #dating_dialog .inp{
     border:1px solid #86A515;
