--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -1270,6 +1270,10 @@ table.table_layout td {
     margin-right: 3px;
     cursor: pointer;
 }
+#rest_dating .inviter img:hover{
+    margin: -2px 1px -2px -2px;
+    border: 2px solid #ff6600;
+}
 #dating_dialog{
     padding:0 10px;
     text-align: center;
