--- a/market/public/css/style.css
+++ b/market/public/css/style.css
@@ -602,17 +602,78 @@ table td {
     margin-left:-300px;
     padding:10px;
 }
+#order_dialog .description {
+    padding: 0px 25px;
+}
+#dish_order_table .caption {
+    border:none;
+    height:15px;
+}
+#dish_order_table .caption td{
+    text-align: center;
+    padding:8px;
+    font-weight: bold;
+}
 #order_dialog #dish_order_items{
     width:100%;
-    margin: 20px 0;
+}
+#order_dialog .caption{
+    height:45px;
 }
 #order_dialog #dish_order_items td{
-    border: 1px solid gray;
+    border-bottom:1px solid gray;
     padding:8px;
+    text-align: center;
+}
+#dish_order_table .caption td.trash_title,
+#order_dialog #dish_order_items td.trash_title{
+    text-align: left;
+    font-weight: bold;
+}
+#order_dialog #dish_order_items .last td{
+    border:0;
 }
 #order_dialog .gen_price {
     margin-bottom: 10px;
-    font-size:22px;
+    font-size:14px;
+    float:right;
+}
+#order_dialog .gen_price td {
+    padding-right: 25px;
+    padding-bottom: 6px;
+    font-weight: bold;
+}
+#order_dialog #order_submit {
+    width:77px;
+    height:27px;
+    float:right;
+    margin-top:15px;
+    background: url(/public/images/icons/trash_submit.jpg);
+    display:block;
+}
+#dish_order_table .rounded {
+    padding:10px;
+    border: 2px solid gray;
+    border-radius:10px;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    margin-bottom: 20px;
+}
+#dish_order_table .remove_item,
+#dish_order_table .plus_item,
+#dish_order_table .minus_item{
+    width:13px;
+    height:13px;
+    display: block;
+    text-decoration: none;
+    background: url(/public/images/icons/trash_controll.jpg) 0 -26px;
+    float:left;
+}
+#dish_order_table .minus_item {
+    background: url(/public/images/icons/trash_controll.jpg) 0 0;
+}
+#dish_order_table .plus_item {
+    background: url(/public/images/icons/trash_controll.jpg) 0 -13px;
 }
 /******************************** Вывод сообщения *****************************/
 #message_dialog {
