--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,6 +58,13 @@ body {
     margin-top:10px;
 
 }
+.rest_banner {
+    width:240px;
+    height:350px;
+    margin-top:20px;
+    margin-left: -30px;
+    text-align: right;
+}
 #header {
     height:170px;
     background:#000;
