--- a/market/public/css/style.css
+++ b/market/public/css/style.css
@@ -89,19 +89,13 @@ table td {
 }
 
 #header {
-    width:100%;
-    height:179px;
-    background:url(/market/public/images/header_bg.png) repeat-x;
+    height:170px;
+    background:#000;
+    padding:10px 0 0 40px;
 }
-
-#header #logo {
+#logo {
+    padding-top: 25px;
     float:left;
-    padding:60px 0 0 20px;
-}
-
-#header #banner_top {
-    float:right;
-    padding:40px 20px 0 0;
 }
 
 /* Меню сайта
