--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,8 +47,9 @@ body {
 .banner770 {
     float:right;
     width:770px;
-    height:160px;
+    height:90px;
     margin-right:10px;
+    margin-top: 10px;
     z-index: 7;
 }
 .banner240n320 {
@@ -66,12 +67,12 @@ body {
     text-align: right;
 }
 #header {
-    height:170px;
+    height:130px;
     background:#000;
     padding:10px 0 0 40px;
 }
 #logo {
-    padding-top: 25px;
+    padding-top: 10px;
     float:left;
 }
 /* Меню сайта
